--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "vue": "^3.4.37"
   },
   "devDependencies": {
+    "@types/node": "^22.5.4",
     "@vitejs/plugin-vue": "^5.1.2",
+    "prettier": "3.3.3",
+    "sass-embedded": "^1.78.0",
     "typescript": "^5.5.3",
     "vite": "^5.4.1",
     "vue-tsc": "^2.0.29"
