--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "devDependencies": {
     "@types/node": "^22.5.4",
     "@vitejs/plugin-vue": "^5.1.2",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.45",
     "prettier": "3.3.3",
     "sass-embedded": "^1.78.0",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.5.3",
     "vite": "^5.4.1",
     "vue-tsc": "^2.0.29"
