--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.37"
+    "vue": "^3.4.37",
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
+    "@types/vue-router": "^2.0.0",
     "@vitejs/plugin-vue": "^5.1.2",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.45",
@@ -20,7 +22,7 @@
     "sass-embedded": "^1.78.0",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.3",
-    "vite": "^5.4.1",
+    "vite": "^5.4.3",
     "vue-tsc": "^2.0.29"
   }
 }
