STYLE: 스와이퍼 추가

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "axios": "^1.7.7",
     "pinia": "^2.2.5",
+    "swiper": "^8.4.7",
     "vue": "^3.4.37",
+    "vue-awesome-swiper": "^5.0.1",
     "vue-router": "^4.4.3"
   },
   "devDependencies": {
