--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "pinia": "^2.2.5",
+    "pinia-plugin-persistedstate": "^4.1.3",
     "swiper": "^8.4.7",
     "vue": "^3.4.37",
     "vue-awesome-swiper": "^5.0.1",
