--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "floor-tier-renewal-front",
+  "name": "floortier-renewal-front",
   "private": true,
   "version": "0.0.0",
   "type": "module",
