--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vuepic/vue-datepicker": "^10.0.0",
     "axios": "^1.8.2",
+    "date-fns": "^4.1.0",
     "pinia": "^2.2.5",
     "pinia-plugin-persistedstate": "^4.1.3",
     "swiper": "^8.4.7",
